--- a/log-in/log-in.css
+++ b/log-in/log-in.css
@@ -107,7 +107,7 @@ margin-top: 7vh;
     position: absolute;
     top: 0;
     left: 0;
-    width: 10vw;
+    width: 14%;
     height: 6.8vh;
     background: linear-gradient(
       90deg,
